--- a/dodam-clone-web-react/src/styles/Profile.css
+++ b/dodam-clone-web-react/src/styles/Profile.css
@@ -1,15 +1,15 @@
-@import url(../all.css);
+@import url(../styles/all.css);
 
 .profile {
   width: 384px;
-  height: 446px;
+  height: 546px;
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(210, 210, 210);
   position: relative;
 
-  margin-left: 100px;
+  margin-left: 140px;
   margin-top: 10px;
 }
 
