--- a/dodam-clone-web-react/src/styles/WakeUpSong.css
+++ b/dodam-clone-web-react/src/styles/WakeUpSong.css
@@ -1,21 +1,22 @@
-@import url(../all.css);
-.today-schedule {
-  width: 280px;
-  height: 320px;
-  background-color: white;
+@import url(../styles/all.css);
 
+.wake-up-song {
   display: flex;
   flex-direction: column;
 
+  width: 15vw;
+  height: 326px;
+
+  border: 1px solid rgb(210, 210, 210);
+  background-color: white;
   -webkit-box-align: center;
   align-items: center;
-  border: 1px solid rgb(210, 210, 210);
 
-  margin-left: 100px;
-  margin-top: 15px;
+  margin-left: 140px;
+  margin-top: 50px;
 }
 
-.schd-info {
+.wake-up-song-info {
   width: calc(100% - 32px);
   min-height: 56px;
 
@@ -26,7 +27,7 @@
   border-bottom: 1px solid rgb(210, 210, 210);
 }
 
-.today-schedule > .schd-info > img {
+.wake-up-song-info > img {
   width: 18px;
   height: 18px;
 
@@ -39,20 +40,21 @@
   margin-top: 20px;
 }
 
-.schd-title {
+.wake-up-song-title {
   font-size: 14px;
   color: #000;
   cursor: pointer;
   font-weight: bold;
-  margin-right: 10px;
+  margin-right: 14px;
   white-space: nowrap;
-  margin-top: 20px;
   display: flex;
 
   background-color: transparent;
+
+  margin: 20px 10px 0px 0px;
 }
 
-.more-schd {
+.more-wake-up-song {
   display: flex;
   -webkit-box-align: center;
   align-items: center;
@@ -60,15 +62,8 @@
   font-size: 14px;
   margin-left: auto;
   cursor: pointer;
+  background-color: transparent;
 }
 
-.schd-content {
-  color: #000;
-  font-size: 14px;
-  -webkit-box-align: center;
-  align-items: center;
-
-  margin-top: 100px;
-
-  background-color: transparent;
+.wake-up-song-content {
 }
